--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ collections:
     output: true
     permalink: /blog/:slug
 
+include:
+  - .well-known/
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
